--- a/resources/sass/_type.scss
+++ b/resources/sass/_type.scss
@@ -1,7 +1,7 @@
 // uses compass stuff
 
 $base-font-size: 16px;
-$base-line-height: 27px;
+$base-line-height: 24px;
 
 @include establish-baseline;
 
